--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,44 +4,49 @@
       <h2>Student Sign Up</h2>
       <form>
         <div class="form-group">
-          <label for="fullname">Full Name <mark style="color: red;">*</mark></label>
+          <label for="fullname">Full Name <mark style="color: red; background:none;">*</mark></label>
           <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required>
         </div>
         <div class="form-group">
-          <label for="email">Email  <mark style="color: red;">*</mark> </label>
-          <input type="email" id="email" name="email" placeholder="Enter your email" required>
+          <label for="Last name">Last Name <mark style="color: red; background:none;">*</mark></label>
+          <input type="text" id="last name" name="Last name" placeholder="Enter your Last name" required>
         </div>
         <div class="form-group">
-          <label for="university">University <mark style="color: red;">*</mark> </label>
-          <input type="text" id="university" name="university" placeholder="Enter your university" required>
-        </div>
-        <div class="form-group">
-          <label for="major">Major  <mark style="color: red;">*</mark> </label>
-          <input type="text" id="major" name="major" placeholder="Enter your major" required>
-        </div>
-        <div class="form-group">
-          <label for="birthdate">Date of Birth <mark style="color: red;">*</mark></label>
+          <label for="birthdate">Date of Birth <mark style="color: red; background:none;">*</mark></label>
           <input type="date" id="birthdate" name="birthdate" required>
         </div>
         <div class="form-group">
-          <label for="password">Password <mark style="color: red;">*</mark></label>
-          <input type="password" id="password" name="password" placeholder="Enter a password" required>
+          <label for="Gender"> Gender <mark style="color: red; background:none;">*</mark></label>
+          <input type="text" id="Gender" name="Gender" placeholder="Enter your Gender" required>
         </div>
         <div class="form-group">
-          <label for="confirmPassword">Confirm Password <mark style="color: red;">*</mark></label>
+          <label for="College Name">College Name <mark style="color: red; background:none;">*</mark> </label>
+          <input type="text" id="College Name" name="College Name" placeholder="Enter your College Name" required>
+        </div>
+        <div class="form-group">
+          <label for="Degree">Degree  <mark style="color: red; background:none;">*</mark> </label>
+          <input type="text" id="Degree" name="Degree" placeholder="Enter your Degree" required>
+        </div>
+        <div class="form-group">
+          <label for="Specialization">Specialization  <mark style="color: red; background:none;">*</mark> </label>
+          <input type="text" id="Specialization" name="Specialization" placeholder="Enter your Specialization" required>
+        </div>
+        <div class="form-group">
+          <label for="Password"> Password <mark style="color: red; background:none;">*</mark></label>
+          <input type="password" id="Password" name="Password" placeholder="Enter your password" required>
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirm Password <mark style="color: red; background:none;">*</mark></label>
           <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-enter your password" required>
         </div>
         <div class="form-group">
-            <label for="Mobile number">Mobile number <mark style="color: red;">*</mark></label>
+            <label for="Mobile number">Mobile number <mark style="color: red; background:none;">*</mark></label>
             <input type="text" id="Mobile number" name="Mobile number" placeholder="Enter 10-digit number" required>
-          </div>
-          <div class="form-group">
-            <label for="Landmark"> Landmark (optional)</label>
-            <input type="Landmark" id="Landmark" name="Landmark" placeholder="" required>
           </div>
         <button type="submit">Sign Up</button>
       </form>
     </div>
   </div>
+
 
 
