--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="form-group">
           <label for="birthdate">Date of Birth <mark style="color: red; background:none;">*</mark></label>
-          <input type="date" id="birthdate" name="birthdate" required>
+          <input type="date" id="birthdate" name="Birthdate" required>
         </div>
         <div class="form-group">
           <label for="Gender">Gender <mark style="color: red; background:none;">*</mark> </label>
